# Squishy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  benchmark.cpp  benchmarking.cpp  createCompDb.bat  main.cpp  main_zzz.cpp  opt_test.cpp  vcpkg.json
assets/: convert.py
include/: ICharacterData.hpp  IWeaponData.hpp  artifact.hpp  character.hpp  characterStore.hpp  conditional.hpp  curves.hpp  element.hpp  node.hpp  stat.hpp  statSheet.hpp  talent.hpp
include/Characters/: cyno.hpp
include/UI/: BackDrawer.hpp  Card.hpp  CharacterCard.hpp  DropdownButton.hpp  Grid.hpp  Masonry.hpp  NodeCard.hpp  Rarity.hpp  TopNav.hpp
include/Weapons/: Staff_of_the_Scarlet_Sands.hpp
scripts/: artifactGenerator.ts  artifactMainstatData.d.ts  artifactMainstatGenerator.ts  artifactSubstatData.d.ts  artifactSubstatGenerator.ts  artifactType.d.ts  characterGenerator.ts  characterType.d.ts  characterTypeLunaris.d.ts  characterTypeNanoka.d.ts  characterTypeYatta.d.ts  manifestNanoka.d.ts  mapped.ts  versionType.d.ts  weaponGenerator.ts  weaponType.d.ts  weaponTypeNanoka.d.ts
scripts/zzz/: agentGenerator.ts  agentTypeNanoka.d.ts  discGenerator.ts  discTypeNanoka.d.ts  engineGenerator.ts  engineTypeNanoka.d.ts  mapped.ts
src/: Conditional.hpp  Curves.hpp  Element.hpp  Node.hpp  Rarity.hpp  Talents.hpp  characterStore.cpp  curves.hpp  store.cpp  store.hpp
src/UI/: BackDrawer.cpp  Card.cpp  CharacterCard.cpp  DropdownButton.cpp  Grid.cpp  Masonry.cpp  NodeCard.cpp  TopNav.cpp  elementToColor.hpp
src/Ui/: RarityToColor.hpp  elementToColor.hpp  rarityToColor.hpp
src/artifact/: instance.cpp  instance.hpp  key.hpp  set.hpp  setBonus.hpp  sets.cpp  sets.hpp  setup.hpp  slot.hpp
src/character/: characters.cpp  characters.hpp  data.hpp  instance.cpp  instance.hpp  key.hpp  setup.hpp
src/combo/: combo.cpp  combo.hpp  entry.hpp  option.hpp  override.hpp  source.cpp  source.hpp
src/conditional/: boolean.hpp  conditional.hpp  valueList.hpp
src/enemy/: instance.hpp  key.hpp
src/formula/: artifact.hpp  attackModifier.hpp  character.hpp  clamp.hpp  combo.hpp  comparators.hpp  conditional.hpp  constant.hpp  context.hpp  custom.hpp  customAttackModifier.hpp  difference.hpp  element.hpp  elemental.hpp  enemy.hpp  formula.hpp  formulaContext.hpp  fraction.hpp  genshinConcepts.hpp  genshinContext.hpp  healModifier.hpp  index.hpp  infusion.hpp  intermediary.hpp  multiplier.hpp  node.hpp  operators.hpp  option.hpp  percentage.hpp  prefix.hpp  product.hpp  reaction.hpp  reactionStat.hpp  refinement.hpp  requirement.hpp  requires.hpp  shieldModified.hpp  stat.hpp  step.hpp  sum.hpp  (+2 more)
src/misc/: ascension.hpp  attackSource.hpp  damageElement.hpp  element.hpp  enemyProps.hpp  lunarDamageType.hpp  reaction.hpp  skillStat.hpp  weaponType.hpp
src/modifiers/: enemyFactory.hpp  helpers.hpp  statFactory.hpp  talentFactory.hpp
src/node/: atkNode.cpp  atkNode.hpp  customAtkNode.cpp  customAtkNode.hpp  directLunar.cpp  directLunar.hpp  directLunarChargedNode.cpp  directLunarChargedNode.hpp  entry.hpp  healNode.cpp  healNode.hpp  infoNode.hpp  modsNode.hpp  node.hpp  nodeData.cpp  nodeData.hpp  shieldNode.hpp
src/optimization/: artifactFilter.hpp  bnb.hpp  bnbTc.hpp  bnbUpgrade.hpp  optimize.cpp  optimize.hpp  optimizeTc.cpp  optimizeTc.hpp  optimizeUpgrade.cpp  optimizeUpgrade.hpp  options.hpp  optionsTc.hpp  solution.hpp  solutionTc.hpp  solutionUpgrade.hpp  theorycraftFilter.hpp  upgradeFilter.hpp
src/option/: boolean.hpp  option.cpp  option.hpp  valueList.hpp  valueSlider.hpp
src/reaction/: additive.hpp  amplifying.hpp  levelMultiplier.hpp  list.hpp  none.hpp  reaction.hpp  transformative.hpp
src/stats/: artifact.cpp  artifact.hpp  artifactSheet.cpp  artifactSheet.hpp  character.cpp  character.hpp  characterBase.hpp  characterSheet.cpp  characterSheet.hpp  characterSheetUtils.hpp  enemy.cpp  enemy.hpp  helpers.hpp  loadout.cpp  loadout.hpp  sheet.hpp  stat.hpp  team.cpp  team.hpp  value.hpp  weapon.cpp  weapon.hpp  weaponBase.hpp  weaponSheet.cpp  weaponSheet.hpp
src/team/: instance.hpp  key.hpp
src/utils/: copyablePtr.hpp  entryType.hpp  function.hpp  hashedString.hpp  isPercentage.hpp  key.hpp  optional.hpp  slotToCondition.hpp  storageFolder.cpp  stringify.hpp
src/weapon/: data.hpp  defaultWeapons.hpp  instance.cpp  instance.hpp  key.hpp  setup.hpp  weapons.cpp  weapons.hpp
src_common/formula/: base.hpp  cast.hpp  clamp.hpp  comparators.hpp  concepts.hpp  constant.hpp  context.hpp  custom.hpp  difference.hpp  fold.hpp  formulaBase.hpp  fraction.hpp  index.hpp  monomial.hpp  node.hpp  operators.hpp  percentage.hpp  prefix.hpp  product.hpp  requires.hpp  step.hpp  sum.hpp  type.hpp
src_common/utils/: entryType.hpp  hashedString.hpp  isPercentage.hpp  key.hpp  optional.hpp  overloaded.hpp  storageFolder.cpp  storageFolder.hpp  stringify.hpp
src_zzz/: store.cpp  store.hpp
src_zzz/UI/: attributeToColor.hpp
src_zzz/agent/: agents.cpp  agents.hpp  data.hpp  instance.cpp  instance.hpp  key.hpp  setup.hpp
src_zzz/anomaly/: anomaly.hpp  list.hpp
src_zzz/combo/: combo.cpp  combo.hpp  entry.hpp  key.hpp  option.hpp  source.cpp  source.hpp
src_zzz/disc/: instance.cpp  instance.hpp  key.hpp  set.hpp  setBonus.hpp  sets.cpp  sets.hpp  setup.hpp  slot.hpp
src_zzz/engine/: data.hpp  engines.cpp  engines.hpp  instance.cpp  instance.hpp  key.hpp  setup.hpp
src_zzz/formula/: agent.hpp  anomaly.hpp  attribute.hpp  (+10 more)
tests/: arithmetic.cc  boolean.cc  constant.cc  storeSetup.hpp  testCharacter.hpp  testWeapon.hpp
(+711 files in other folders)
